Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-25057

QmlDesigner: Zoom factor feature for the live preview has gone missing

    XMLWordPrintable

Details

    • 7622cc4c09abfb75b4e20d6578bddfdf16c41161 (qt-creator/qt-creator/4.14)

    Description

      Qt Design Studio has a zoom factor combobox, and previous versions of Qt Quick Designer in Qt Creator also had it. Now it is gone:

      I believe it went missing when the translation feature (which seems to be exclusive to Qt Design Studio) was added.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tjenssen Tim Jenssen
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes