QmlDesigner: Bring back the preview zoom factor combobox

Fixes: QTCREATORBUG-25057
Change-Id: I52dadc8798a5271cef2dbca718a3e33dc3998958
Reviewed-by: Tim Jenssen <tim.jenssen@qt.io>